# cookbook

./: .gitignore  README.md
bca-agent/: .env.example  .gitignore  README.md  pyproject.toml
bca-agent/.veris/: .dockerignore  Dockerfile.sandbox  veris.yaml
bca-agent/app/: config.py  main.py
bca-agent/app/services/: bca_service.py
bca-agent/app/services/agents/: clear_cuid_agent.py  kb_agent.py  supervisor_agent.py
bca-agent/app/services/tools/: hogan_tools.py  kb_tool.py
bca-agent/docs/: clear_cuid_procedure.md
bca-agent/scripts/: setup_rag.sh
brandpulse-agent/: README.md
card-replacement-agent/: .dockerignore  .gitignore  Dockerfile  README.md  __init__.py  agent_desc.yaml  docker-compose.yml  pyproject.toml
card-replacement-agent/.veris/: Dockerfile.sandbox  veris.yaml
card-replacement-agent/app/: db.py  main.py
card-replacement-agent/app/agent_setup/: agent_tools.py  subagents.py
card-replacement-agent/db/: init.sql  schema.sql
card-replacement-agent/ui/ui/: package-lock.json  package.json
card-replacement-agent/ui/ui/app/: globals.css  layout.tsx
card-replacement-agent/ui/ui/components/chat/: chat-input.tsx  chat-message.tsx  chat-panel.tsx
card-replacement-agent/ui/ui/components/ui/: avatar.tsx
crm-analyst-agent/: .gitignore  README.md  crm-analyst-secrets.env.example  (+1 more)
holmes-gpt-agent/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
holmes-gpt-agent/.holmes/: config.yaml
holmes-gpt-agent/.veris/: .dockerignore  Dockerfile.sandbox  veris.yaml
holmes-gpt-agent/app/: __init__.py  investigator.py  main.py
medical-triage-agent/: .env.example  Dockerfile  Makefile  README.md  pyproject.toml
medical-triage-agent/.veris/: Dockerfile.sandbox  veris.yaml
medical-triage-agent/src/: fhir_client.py  main.py  scheduling_client.py  tools.py
mini-bcs/: .dockerignore  .gitignore  Dockerfile  README.md  agent_desc.txt  docker-compose.yml  pyproject.toml  start.sh
mini-bcs/.veris/: Dockerfile.sandbox  veris.yaml
mini-bcs/app/: __init__.py  db.py  main.py  session_manager.py
mini-bcs/app/agent_setup/: agent_tools.py  subagents.py
mini-bcs/app/db/: seed_data.json  tinydb.json
mini-bcs/db/: init.sql  schema.sql
mini-bcs/ui/: package.json
mini-bcs/ui/app/: layout.tsx  page.tsx
mini-bcs/ui/components/chat/: chat-input.tsx  chat-message.tsx  chat-panel.tsx
procurement-agent/: .gitignore  README.md  pyproject.toml
procurement-agent/.veris/: Dockerfile.sandbox  config.yaml  veris.yaml
procurement-agent/app/: __init__.py  config.py  email_poller.py  main.py
procurement-agent/app/agents/: __init__.py  context.py  instruction.md  policy_checker.py  procurement_agent.py  tools.py
procurement-agent/app/dependencies/: __init__.py
procurement-agent/app/dependencies/oracle/: __init__.py  auth.py  client.py
procurement-agent/app/email/: __init__.py  agentmail_backend.py  base.py  gmail_backend.py
procurement-agent/app/schemas/: __init__.py  email.py
procurement-agent/scenarios/: laptop_procurement_happy_path.yaml  laptop_procurement_single_vendor.yaml
procurement-agent/tests/: test_oracle_mock.py  test_policy_checker.py  test_procurement_flow.py  test_quote_tracker.py
tau2-retail-agent/: .gitignore  README.md  agent_desc.txt  eval.sh  pyproject.toml
tau2-retail-agent/.veris/: Dockerfile.sandbox  veris.yaml
tau2-retail-agent/agent/: core.py  server.py  tau2_agent.py  tools.py
tau2-retail-agent/scripts/: run_tau2.py
(+58 files in other folders)
