[project]
name = "procurement-agent"
version = "0.1.0"
description = "IT procurement sourcing & negotiation agent with Oracle Fusion Cloud ERP integration"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "agentmail>=0.1.5",
    "fastapi>=0.115.0",
    "google-api-python-client>=2.100.0",
    "google-auth>=2.20.0",
    "httpx>=0.26.0",
    "openai-agents>=0.0.3",
    "pydantic-settings>=2.0.0",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
]
